<?xml version="1.0"?>
<package>
  <name>roomba_nev</name>
  <version>0.0.0</version>
  <description>The roomba_nev package</description>
 
  <author email="islam.a10043@yahoo.com">Islam Ahmed</author>

  <maintainer email="islam.a10043@yahoo.com">Islam Ahmed</maintainer>

  
<license>no-license</license>
 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
 
</package>
